--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+datasource.url=jdbc:mysql://localhost:3306/tset?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 datasource.username=root
-datasource.password=root
+datasource.password=123456
 datasource.driver-class-name=com.mysql.jdbc.Driver
